--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@contact) do |f| %>
+<%#= form_for(@contact), :url => contacts_path, :html => { multipart => true } do |f| %>
+<%= form_for @contact do |f| %>
   <% if @contact.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
@@ -23,6 +24,7 @@
     <%= f.label :cell %><br>
     <%= f.text_field :cell %>
   </div>
+
   <div class="field">
     <%= f.label :suject %><br>
     <%= f.text_area :suject %>
