--- a/app/views/myforms/_form.html.erb
+++ b/app/views/myforms/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.inputs do %>
     <%= f.input :name, :required => true  %>
     <%= f.input :gender, :as => :radio, :collection => [:Male, :Female] %>
-    <%= f.input :category, :as => :select, :collection => Customer.pluck(:name) %>
+    <%= f.input :category, :as => :select, :collection => Contact.pluck(:name).uniq %>
     <%= f.input :email %>
     <%= f.input :cell, :label => "Phone", :hint => "Something" %>
     <%= f.input :address %>
